--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   <div>
     <input type="search" id="search" class="validate">
-    <label for="search" class="search">Buscar</label>
+    <label for="search" class="search">Buscar(ingrese comida que desee Buscar)</label>
 </div>
   <main id="producto-contenedor">
 
@@ -54,8 +54,8 @@
       <p class="precioProducto">Subtotal: $ <span id="precioSubtotal"></span></p>
       <p class="precioProducto">IVA: $ <span id="precioIVA"></span></p>
       <p class="precioProducto"> <b>Total: $</b>   <span id="precioTotal"></span></p>
-
-   to" id="btn-eliminar-todo-del-carrito">Finalizar Compra</button>
+      <button class ="btn vaciar-carrito" id="btn-eliminar-todo-del-carrito">Vaciar Carrito</button>
+      <button class ="btn comprar-carrito" id="btn-eliminar-todo-del-carrito">Finalizar Compra</button>
     </div>
     </div>
   </div>
